--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MarekGuráň"
         android:usesCleartextTraffic="true"
+        android:fitsSystemWindows="true"
         tools:targetApi="33">
         <activity
             android:name=".MainActivity"
